# XCompress

./: .gitignore  README.md  ToDo.txt  batch_ops.py  bcm.py  benchmark.py  brute_force.py  compress.py  create_config.py  csm.py  decompress.py  llm_model.py  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  select_compression.py  train_data_generator.py  util.py  visualization.py
RevisionFiles/: TestLLMResults.ipynb
RevisionFiles/LLM-Test-Data/: nattest.txt  progtest.txt  sensortest.txt  sqltest.txt
RevisionFiles/NgramCompressor/: 2gram-compression-raw-results.json  3gram-compression-raw-results.json  4gram-compression-raw-results.json  bpc-and-speed-results.txt  ngramcompress.py
compression_configs/: LZW-def.json  bzip2-def.json  lz4-def.json  nncp-def.json  ppm-def.json  zstd-def.json
docs/: reference.md  tutorials.md
reference/: index.html
site/: 404.html  index.html  objects.inv
site/reference/: index.html
site/tutorials/: index.html
tests/: test_benchmark.py  test_brute_force.py  test_compress.py  test_create_config.py  test_csm.py  test_decompress.py  test_llm_model.py  test_select_compression.py  test_util.py  test_visualization.py
tests/data/: benchmark_results.json
xcompress/: __init__.py  batch_ops.py  benchmark.py  brute_force.py  compress.py  create_config.py  csm.py  decompress.py  llm_model.py  main.py  select_compression.py  util.py  visualization.py
xcompress/compression_configs/: brotli-def.json  gzip-def.json  lz4-def.json  lzma-def.json  ngram-def.json  paq-def.json  snzip-def.json  zlib-def.json
(+2 files in other folders)
